# k-releaser

./: CONFIGURATION.md  Cargo.toml  README.md  action.yml
.github/workflows/: release.yml  test.yml
crates/git_cmd/: README.md
crates/k_releaser/: Cargo.toml
crates/k_releaser/src/: changelog_config.rs  config.rs  config_show.rs  config_show_test.rs  main.rs
crates/k_releaser/src/args/: config.rs  config_path.rs  mod.rs  publish.rs  release.rs  release_pr.rs  update.rs
crates/k_releaser/tests/all/: changelog.rs  release_pr.rs
crates/k_releaser_core/: README.md
crates/k_releaser_core/src/: http_client.rs  pr.rs  semver_check.rs
crates/k_releaser_core/src/command/: publish.rs  release.rs
crates/k_releaser_core/src/command/release_pr/: mod.rs
crates/k_releaser_core/src/command/update/: packages_update.rs  update_config.rs  updater.rs
crates/k_releaser_core/src/git/: forge.rs
crates/k_releaser_core/tests/all/: update.rs
crates/k_releaser_core/tests/all/helpers/: user_mock.rs
crates/next_version/src/: next_version.rs  version_increment.rs
crates/test_logs/: README.md
tests/: docker-compose.yml
