[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/k_releaser"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secana/k-releaser"
authors = ["Stefan Hausotte"]
keywords = ["release", "semver", "conventional", "commits"]
categories = ["development-tools"]

[workspace.dependencies]
# Internal dependencies
cargo_utils = { path = "crates/cargo_utils" }
fake_package = { path = "crates/fake_package" }
git_cmd = { path = "crates/git_cmd" }
k_releaser_core = { path = "crates/k_releaser_core", default-features = false }
next_version = { path = "crates/next_version" }
test_logs = { path = "crates/test_logs" }

# External dependencies
anyhow = "1.0.99"
assert_cmd = "2.0.17"
base64 = "0.22.1"
camino = "1.1.12"
cargo_metadata = "0.23.0"
cargo = { version = "0.93.0", default-features = false }
chrono = { version = "0.4.42", default-features = false }
clap = "4.5.47"
clap_complete = "4.5.57"
crates-index = { version = "3.11.0", features = ["git", "sparse", "git-https"] }
dirs = "6.0.0"
dunce = "1.0.5"
expect-test = "1.5.1"
fake = "4.4.0"
fs-err = "3.1.1"
git-cliff-core = { version = "2.10.0", default-features = false }
git-conventional = "0.12.9"
git-url-parse = "0.6.0"
h2 = "0.4"
http = "1.3.1"
ignore = "0.4.23"
itertools = "0.14.0"
parse-changelog = { version = "0.6.13", default-features = false }
pretty_assertions = "1.4.1"
rayon = "1.11.0"
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.13.1"
reqwest-middleware = { version = "0.5.0", features = ["json"] }
reqwest-retry = "0.9.0"
secrecy = "0.10.3"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.143"
strip-ansi-escapes = "0.2.1"
tempfile = "3.22.0"
tera = "1.20.0"
tokio = "1.47.1"
toml = { version = "0.9.5" }
toml_edit = { version = "0.24.0" }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"
wiremock = "0.6.5"
