[package]
name = "k-releaser"
version.workspace = true
edition.workspace = true
description = "Update version and changelog based on semantic versioning and conventional commits"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["docker-tests", "all-static"]
# Run tests that need a docker runtime to be executed
docker-tests = []
all-static = ["k_releaser_core/all-static"]

[dependencies]
git_cmd.workspace = true
k_releaser_core.workspace = true
cargo_utils.workspace = true

anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
dirs.workspace = true
fs-err.workspace = true
git-cliff-core.workspace = true
regex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cargo_utils.workspace = true
test_logs.workspace = true
fake_package.workspace = true

assert_cmd.workspace = true
fake.workspace = true
expect-test.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml_edit.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/k-releaser-v{ version }/{ name }-{ target }{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
